--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ round-avatar: true
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
   email: "mau.sanjuanp@gmail.com"
-  github: xotic
+  github: xotic06
   rss: false
 # twitter: _Apr4h
 #  reddit: yourname
@@ -70,7 +70,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "https://xotic.githiub.io"
+url-pretty: "https://xotic06.githiub.io"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
